k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petrosa-tradeengine-service
  namespace: petrosa-apps
  labels:
    app: petrosa-tradeengine
    version: VERSION_PLACEHOLDER
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: metrics
  selector:
    app: petrosa-tradeengine
